# N-Dollar_SPL_v2

./: Anchor copy 2.toml  Anchor.toml  README.md  TODO.txt  mtl.txt  ndollar.txt  package-lock.json  package.json  programs_description.md  Как правильно делать CPI (РАБОЧИЙ ВАРИАНТ).txt  Основная идея N-Dollar.txt  аккаунты.txt
awesome/genesis/: Cargo.toml
awesome/liquidity-pool/: Cargo.toml
awesome/src/: lib.rs
docs/: creator_buy_mechanism.md  cvd.md
modules/: bonding-curve.ts  liquidity-manager.ts  metadata-mock.ts  mock-metadata.ts  n-dollar-token.ts  price-testing.ts  setup-helpers.ts  trading-exchange.ts
programs/admin_control/: Cargo.toml
programs/awesome/: Cargo.toml
programs/bonding-curve/: Cargo.toml
programs/genesis/: Cargo.toml
programs/liquidity-manager/: Cargo.toml
programs/n-dollar/: Cargo.toml
programs/n-dollar-token/: Cargo.toml
programs/n-dollar-token/src/: README.md  constants.rs  errors.rs  lib.rs  old_lib.rs  state.rs
programs/n-dollar-token/src/contexts/: admin.rs  initialize.rs  metadata.rs  mint.rs  mod.rs
programs/n-dollar-token/src/instructions/: admin.rs  auth.rs  initialize.rs  metadata.rs  mint.rs  mod.rs  utils.rs
programs/n-dollar/src/: lib.rs
programs/referral-program/: Cargo.toml
programs/referral-rewards/: Cargo.toml
programs/token-distributor/: Cargo.toml
programs/token-distributor/src/: lib copy.rs  lib.rs
tests/: README.md  admin_control.ts  creation_n-dollar copy 2.ts  creation_n-dollar copy 3.ts  creation_n-dollar copy latest.ts  creation_n-dollar copy.ts  creation_n-dollar create ndollar and swap.ts  creation_n-dollar original.ts  creation_n-dollar.ts  liquidity-routing.ts  n-dollar-exchange copy.ts  n-dollar-exchange-devnet.ts  n-dollar-exchange-mock.ts  n-dollar-exchange.ts  new-n-dollar.ts  pool.ts  test_liquiditi.ts  token-test copy 2.ts  token-test copy 3_old_bounding_qurve.ts  token-test.ts  token-test_creation_n-dollar.ts  user-token original.ts  user-token.ts  user-token_user_token_by_n-dollar.ts
(+109 files in other folders)
