[package]
name = "n-dollar-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "n_dollar_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
# Временно закомментировано для тестирования стандартного SPL токена без метаданных
# anchor-spl = { version = "0.31.0", features = ["metadata"] }
anchor-spl = { version = "0.31.0" }
admin_control = { path = "../admin_control", features = ["cpi"] }
liquidity-manager = { path = "../liquidity-manager", features = ["cpi"] }

